# allianceauth-oidc-provider

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierignore  Makefile  README.md  _pyproject.toml  pyproject.toml  tox.ini
.github/workflows/: main.yml  publish.yml
.tx/: transifex.yml
allianceauth_oidc/: __init__.py  admin.py  apps.py  auth_provider.py  models.py  signals.py  tasks.py  urls.py  views.py
allianceauth_oidc/locale/en/LC_MESSAGES/: django.po
allianceauth_oidc/locale/uk/LC_MESSAGES/: django.po
allianceauth_oidc/migrations/: 0001_initial.py  0002_alter_allianceauthapplication_options_and_more.py  0003_remove_allianceauthapplication_logo_and_more.py  0004_allianceauthapplication_allowed_origins_and_more.py  0005_alter_allianceauthapplication_authorization_grant_type.py
allianceauth_oidc/templates/allianceauth_oidc/: authorize.html  denied.html  logout_confirm.html
allianceauth_oidc/tests/: __init__.py  test_access.py
tests/: test_settings.py  test_settingsAA3.py  test_settingsAA4.py  urls.py
